hotfix (about): deleted 2 games from grid

--- a/index.html
+++ b/index.html
@@ -181,45 +181,31 @@
           </p>
           <!-- GAMES GRID -->
           <div class="about__right__games">
-            <a href="/">
+            <a href="#game1">
               <img
                 src="/public/about-games/game1.png"
                 alt="game1"
                 class="about__right__games__img"
               />
             </a>
-            <a href="/">
+            <a href="#game2">
               <img
                 src="/public/about-games/game2.png"
                 alt="game2"
                 class="about__right__games__img"
               />
             </a>
-            <a href="/">
+            <a href="#game3">
               <img
                 src="/public/about-games/game3.png"
                 alt="game3"
                 class="about__right__games__img"
               />
             </a>
-            <a href="/">
+            <a href="#game4">
               <img
                 src="/public/about-games/game4.png"
                 alt="game4"
-                class="about__right__games__img"
-              />
-            </a>
-            <a href="/">
-              <img
-                src="/public/about-games/game5.png"
-                alt="game5"
-                class="about__right__games__img"
-              />
-            </a>
-            <a href="/">
-              <img
-                src="/public/about-games/game6.png"
-                alt="game6"
                 class="about__right__games__img"
               />
             </a>
@@ -250,45 +236,31 @@
           </div>
           <!-- GAMES GRID (MOBILE) -->
           <div class="about__mobile__content__grid">
-            <a href="/">
+            <a href="#game1">
               <img
                 src="/public/about-games/game1.png"
                 alt="game1"
                 class="about__mobile__content__grid__img"
               />
             </a>
-            <a href="/">
+            <a href="#game2">
               <img
                 src="/public/about-games/game2.png"
                 alt="game2"
                 class="about__mobile__content__grid__img"
               />
             </a>
-            <a href="/">
+            <a href="#game3">
               <img
                 src="/public/about-games/game3.png"
                 alt="game3"
                 class="about__mobile__content__grid__img"
               />
             </a>
-            <a href="/">
+            <a href="#game4">
               <img
                 src="/public/about-games/game4.png"
                 alt="game4"
-                class="about__mobile__content__grid__img"
-              />
-            </a>
-            <a href="/">
-              <img
-                src="/public/about-games/game5.png"
-                alt="game5"
-                class="about__mobile__content__grid__img"
-              />
-            </a>
-            <a href="/">
-              <img
-                src="/public/about-games/game6.png"
-                alt="game6"
                 class="about__mobile__content__grid__img"
               />
             </a>
