feat (pack): added pack block;

--- a/index.html
+++ b/index.html
@@ -267,11 +267,73 @@
           </div>
         </div>
       </div>
+      <!-- PACKS BLOCK -->
+      <div class="pack__wrapper">
+        <div class="pack">
+          <div class="pack__info">
+            <h4 class="pack__info__upperheading">Jackbox Party Packs</h4>
+            <h1 class="pack__info__heading">
+              Go ahead and choose a Party Pack
+            </h1>
+            <p class="pack__info__label">
+              Every Party Pack includes five unique games, and to date, we’ve
+              released ten different packs. Our lineup blends a variety of game
+              types — drawing, writing, trivia, and hidden role games.
+            </p>
+          </div>
+          <div class="pack__list">
+            <a href="#naughty">
+              <img
+                src="/public/packs/naughty.webp"
+                alt=""
+                class="pack__list__img"
+              />
+            </a>
+            <a href="#10">
+              <img src="/public/packs/10.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#9">
+              <img src="/public/packs/9.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#starter">
+              <img
+                src="/public/packs/starter.webp"
+                alt=""
+                class="pack__list__img"
+              />
+            </a>
+            <a href="#8">
+              <img src="/public/packs/8.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#7">
+              <img src="/public/packs/7.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#6">
+              <img src="/public/packs/6.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#5">
+              <img src="/public/packs/5.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#4">
+              <img src="/public/packs/4.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#3">
+              <img src="/public/packs/3.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#2">
+              <img src="/public/packs/2.webp" alt="" class="pack__list__img" />
+            </a>
+            <a href="#1">
+              <img src="/public/packs/1.webp" alt="" class="pack__list__img" />
+            </a>
+          </div>
+        </div>
+      </div>
       <!-- FAQ BLOCK -->
       <div class="faq">
         <!-- CHIMP IMG -->
         <div class="faq__img">
-          <img src="/public/monkey.webp" alt="Monkey" />
+          <img src="/public/imgs/monkey.webp" alt="Monkey" />
         </div>
         <!-- FAQ LIST -->
         <div class="faq__right">
@@ -605,5 +667,6 @@
     </footer>
     <!-- SCRIPTS -->
     <script src="/scripts/Accordion.js"></script>
+    <script src="/scripts/AboutAnimation.js"></script>
   </body>
 </html>
