change paths from style files for deploy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header__left">
           <!-- LOGO -->
           <a class="logo" href="/">
-            <img class="logo__img" src="./public//logo.svg" alt="Logo" />
+            <img class="logo__img" src="./public/logo.svg" alt="Logo" />
           </a>
           <!-- BURGER ICON -->
           <div class="menu">
