fix paths on logo click

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header">
         <div class="header__left">
           <!-- LOGO -->
-          <a class="logo" href="/">
+          <a class="logo" href="./">
             <img class="logo__img" src="./public/logo.svg" alt="Logo" />
           </a>
           <!-- BURGER ICON -->
@@ -1190,8 +1190,8 @@
         <!-- FORM -->
         <div class="socials__left">
           <!-- LOGO -->
-          <a class="logo socials__left__logo" href="/">
-            <img class="logo__img" src="./public//logo.svg" alt="Logo" />
+          <a class="logo socials__left__logo" href="./">
+            <img class="logo__img" src="./public/logo.svg" alt="Logo" />
           </a>
           <h4 class="newsletter__heading">Subscribe to our newsletter</h4>
           <p class="newsletter__desc">
