--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@
       <div class="header">
         <div class="header__left">
           <!-- LOGO -->
-          <a class="logo" href="/">
-            <img class="logo__img" src="/public//logo.svg" alt="Logo" />
+          <a class="logo" href="./">
+            <img class="logo__img" src="./public/logo.svg" alt="Logo" />
           </a>
           <!-- BURGER ICON -->
           <div class="menu">
@@ -252,8 +252,8 @@
         <!-- FORM -->
         <div class="socials__left">
           <!-- LOGO -->
-          <a class="logo socials__left__logo" href="/">
-            <img class="logo__img" src="/public//logo.svg" alt="Logo" />
+          <a class="logo socials__left__logo" href="./">
+            <img class="logo__img" src="./public/logo.svg" alt="Logo" />
           </a>
           <h4 class="newsletter__heading">Subscribe to our newsletter</h4>
           <p class="newsletter__desc">
